fix: use declarativeNetRequest API for cache management and update permissions

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,7 @@
   "permissions": [
     "browsingData",
     "storage",
-    "webRequest",
+    "declarativeNetRequest",
     "activeTab",
     "tabs"
   ],
