feat: refactor URL configuration to domain configuration and update related scripts

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,7 +27,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["url-config.html"],
+      "resources": ["domain-config.html"],
       "matches": ["<all_urls>"]
     }
   ]
